kubernetes/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: swing-tps-res
  namespace: mwportal
spec: 
  selector: 
    app: swing-tps-res
  type: ClusterIP 
  ports: 
    - name: http 
      port: 8080 
      protocol: TCP
      targetPort: 8080
