kubernetes/ingress.yaml
apiVersion: extensions/v1beta1 
kind: Ingress 
metadata: 
  name: swing-tps-res
  namespace: mwportal
  labels: 
    app.kubernetes.io/name: swing-tps-res
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false" 
spec: 
  rules: 
  - host: swing-tps-res.mwportal.com
    http: 
      paths: 
      - path: / 
        backend: 
          serviceName: swing-tps-res
          servicePort: 8080
